--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,16 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.App-photo {
+  height: 55vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   background-color: #282c34;
@@ -22,6 +22,12 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.list{
+  list-style-type: none;
+  margin: auto;
+  padding-inline-start: 0px;
 }
 
 .App-link {
